--- a/devwareProject/src/main/resources/application.yml
+++ b/devwareProject/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
 
   datasource:
    url: jdbc:oracle:thin:@localhost:1521/xe
-   username: devware
+   username: usertest01
    password: tiger
    driver-class-name: oracle.jdbc.driver.OracleDriver
    
