#2022.12.01 [김우석] 근태관리 적용

--- a/devwareProject/src/main/resources/application.yml
+++ b/devwareProject/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
 
   datasource:
    url: jdbc:oracle:thin:@localhost:1521/xe
-   username: usertest01
+   username: pjtest
    password: tiger
    driver-class-name: oracle.jdbc.driver.OracleDriver
    
