--- a/devwareProject/src/main/resources/application.yml
+++ b/devwareProject/src/main/resources/application.yml
@@ -2,9 +2,20 @@ server:
   port : 8499
 #  ssl:
 #    enabled: true
+#    key-store: key_store.jks
+#    key-store-password: jemma12
+#    #key-password: K3XpNLrkvi9YHfWl-twewvNlFnSMUmGl
+#    key-alias: devware.shop
+#    trust-store: trustcert.jks
+#    trust-store-password: jemma12
+
+  
+#    enabled: true
 #    key-store: keystore
 #    key-store-type: PKCS12
 #    key-store-password: jemma
+
+
 # Oracle Connect
 spring:
 
